# irwir

./: Cargo.toml  README.md  config.toml
src/: actions.rs  enums_from_names.rs  main.rs  scripting.rs  uinput_device.rs
