[package]
name = "irwir"
authors = ["Alexander Sosedkin <monk@unboiled.info>"]
description = "An input remapper for linux"
keywords = ["uinput", "linux", "input", "input-remapping"]
license = "GPL-3.0-or-later"
repository = "https://github.com/t184256/irwir"
version = "0.1.0"

[dependencies]
evdev-rs = "0.1.0"
input-linux = "0.0.1"
ref_slice = "1.1.1"
#libc = "0.2.42"
#uinput = "0.1.3"
#evdev = "0.10.1"
#libevdev-sys = "0.1.1"
#evdev-sys = "0.1.0"
#input-linux-sys = "0.3.1"
