[package]
name = "irwir"
authors = ["Alexander Sosedkin <monk@unboiled.info>"]
description = "An input remapper for linux"
keywords = ["uinput", "linux", "input", "input-remapping"]
license = "GPL-3.0-or-later"
repository = "https://github.com/t184256/irwir"
version = "0.1.0"

[dependencies]
input-linux = { version = "0.0.1", features = [ "with-serde" ] }
ref_slice = "1.1.1"
serde = "1.0.70"
serde_derive = "1.0.70"
toml = "0.4.6"
#libc = "0.2.42"
#uinput = "0.1.3"
#evdev = "0.10.1"
#libevdev-sys = "0.1.1"
#evdev-sys = "0.1.0"
#input-linux-sys = "0.3.1"
